--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         chat-title="신영 Smart 챗봇"
         agent-id="7dd22936-1440-4eef-be60-3ee33e6b69c6"
         language-code="ko"
-        chat-icon="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSatuwQnVGZJrqKaKc34bJjySyI-QQW-udsCA&usqp=CAU"
+        chat-icon="https://ifh.cc/g/c7BatE.png"
     ></df-messenger>
     <script>
         cssVars({
