--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
 <body>
     <!-- front -->
     <!-- 제목 -->
-    <p id="sub">신영증권</p>
-    <p id="sub2">챗봇</p> 
+    <div class="slide-right">
+        <h2 id="sub">신영증권</h2>
+    </div>
+    <div class="slide-right-2">
+        <h2 id="sub2">챗봇</h2>
+    </div>
+    
+     
     <div class="rec"></div>
 
-    <p id="dec">신영증권&nbsp;<span class="clr"> 신입사원들의 궁금증</span>을 해결해 줄 챗봇서비스 "신영 Smart 챗봇"</p>
-    <p id="dec2">무엇이든지 물어보신영 #챗봇 #신영증권</p>
+    <p id="dec">신영증권&nbsp;<span class="clr" style="color:green;"> 신입사원들의 궁금증</span>을 해결해 줄 챗봇서비스 "신영 Smart 챗봇"</p>
+    <p id="dec2">
+        무엇이든지 물어보신영&nbsp;
+        <span class="cb" style="background-color: green; color: white;">#챗봇</span>
+        &nbsp;
+        <span class="sy" style="background-color: green; color: white;"><a href="https://www.shinyoung.com" target="_blank">#신영증권</a></span>
+    </p>
 
     <!-- dialogflow -->
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
