--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
      
     <div class="rec"></div>
 
-    <p id="dec">신영증권&nbsp;<span class="clr" style="color:green;"> 신입사원들의 궁금증</span>을 해결해 줄 챗봇서비스 "신영 Smart 챗봇"</p>
-    <p id="dec2">
+    <div id="dec">
+        신영증권 신입사원들의 궁금증을 해결해 줄 챗봇서비스 "신영 Smart 챗봇"
+    </div>
+    <div id="dec2">
         무엇이든지 물어보신영&nbsp;
         <span class="cb" style="background-color: green; color: white;">#챗봇</span>
         &nbsp;
         <span class="sy" style="background-color: green; color: white;"><a href="https://www.shinyoung.com" target="_blank">#신영증권</a></span>
-    </p>
+    </div>
 
     <!-- dialogflow -->
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
